# workflow-architectures

./: main.ipynb  main.py  pyproject.toml
